--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "kryptodash",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://sonabstudios.github.io/kryptodash",
+  "repository": "git@github.com:sonabstudios/kryptodash.git",
   "dependencies": {
     "@types/jest": "24.0.20",
     "@types/node": "12.11.7",
-    "@types/react": "16.9.11",
+    "@types/react": "^16.9.11",
     "@types/react-dom": "16.9.3",
+    "@types/styled-components": "^4.1.20",
+    "gh-pages": "^2.1.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
+    "react-scripts-ts": "^3.1.0",
     "styled-components": "^4.4.0",
     "typescript": "3.6.4"
   },
@@ -17,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,8 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/styled-components": "^4.1.20"
   }
 }
