--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^16.9.11",
     "@types/react-dom": "16.9.3",
     "@types/styled-components": "^4.1.20",
+    "cryptocompare": "^1.0.0",
     "gh-pages": "^2.1.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
