--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
   "repository": "git@github.com:sonabstudios/kryptodash.git",
   "dependencies": {
     "@types/jest": "24.0.20",
+    "@types/lodash": "^4.14.145",
     "@types/node": "12.11.7",
     "@types/react": "^16.9.11",
     "@types/react-dom": "16.9.3",
-    "@types/styled-components": "^4.1.20",
+    "@types/styled-components": "^4.1.22",
     "cryptocompare": "^1.0.0",
     "gh-pages": "^2.1.1",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.15",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
     "react-scripts-ts": "^3.1.0",
-    "styled-components": "^4.4.0",
+    "styled-components": "^4.4.1",
     "typescript": "3.6.4"
   },
   "scripts": {
@@ -24,7 +27,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
