--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "16.9.3",
     "@types/styled-components": "^4.1.22",
     "cryptocompare": "^1.0.0",
+    "fuzzy": "^0.1.3",
     "gh-pages": "^2.1.1",
     "loadash": "^1.0.0",
     "lodash": "^4.17.15",
