--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "12.11.7",
     "@types/react": "^16.9.11",
     "@types/react-dom": "16.9.3",
+    "@types/react-highcharts": "^16.0.2",
     "@types/styled-components": "^4.1.22",
     "cryptocompare": "^1.0.0",
     "fuzzy": "^0.1.3",
@@ -18,6 +19,7 @@
     "lodash": "^4.17.15",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-highcharts": "^16.1.0",
     "react-scripts": "3.2.0",
     "react-scripts-ts": "^3.1.0",
     "styled-components": "^4.4.1",
