--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gh-pages": "^2.1.1",
     "loadash": "^1.0.0",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-highcharts": "^16.1.0",
