--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,24 +11,19 @@ phases:
   post_build:
     commands:
       # copy the contents of /build to S3
-      - aws s3 cp --recursive --acl public-read ./build s3://${DeployBucket}/
+      - aws s3 cp --recursive --acl public-read ./build s3://dev-kryptodash/
       # set the cache-control headers for service-worker.js to prevent
       # browser caching
       - >
         aws s3 cp --acl public-read 
         --cache-control="max-age=0, no-cache, no-store, must-revalidate" 
-        ./build/service-worker.js s3://${DeployBucket}/
+        ./build/service-worker.js s3://dev-kryptodash/
       # set the cache-control headers for index.html to prevent
       # browser caching
       - >
         aws s3 cp --acl public-read 
         --cache-control="max-age=0, no-cache, no-store, must-revalidate" 
-        ./build/index.html s3://${DeployBucket}/
-      # invalidate the CloudFront cache for index.html and service-worker.js
-      # to force CloudFront to update its edge locations with the new versions
-      - >
-        aws cloudfront create-invalidation --distribution-id ${Distribution} 
-        --paths /index.html /service-worker.js
+        ./build/index.html s3://dev-kryptodash/
 artifacts:
   files:
     - '**/*'
