updated to material-ui

--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": false,
   "repository": "git@github.com:sonabstudios/kryptodash.git",
   "dependencies": {
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.9.0",
     "@types/jest": "24.0.20",
     "@types/lodash": "^4.14.145",
+    "@types/material-ui": "^0.21.7",
     "@types/node": "12.11.7",
     "@types/react": "^16.9.11",
     "@types/react-dom": "16.9.3",
@@ -16,6 +19,7 @@
     "gh-pages": "^2.1.1",
     "loadash": "^1.0.0",
     "lodash": "^4.17.15",
+    "material-ui": "^0.20.2",
     "moment": "^2.24.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
