--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kryptodash",
   "version": "0.1.0",
   "private": false,
+  "homepage": "https://sonabstudios.github.io/kryptodash",
   "repository": "git@github.com:sonabstudios/kryptodash.git",
   "homepage": "https://jnabor.github.io/kryptodash/",
   "dependencies": {
